--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 <div class="container">
   <h1>Juego de Preguntas y Respuestas</h1>
   
-  <div id="quiz" class="question"></div>
+  <button id="quiz" class="question"></button>
   <input id="answer" type="text">
   <button id="submit">Enviar Respuesta</button>
   <div id="score"></div>
